# saas-axum

./: .env.example  .gitignore  Cargo.toml
src/: lib.rs
src/common/: db.rs  errors.rs  jwt.rs  mod.rs  pagination.rs  password.rs  response.rs  state.rs  validator.rs
src/entity/: audit_logs.rs  intentions.rs  login_logs.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  sea_orm_active_enums.rs  sessions.rs  system_settings.rs  users.rs
src/middleware/: auth.rs
src/modules/auth/: dto.rs  handlers.rs  mod.rs  service.rs
src/modules/user/: dto.rs  handlers.rs  service.rs
