[package]
name = "saas-axum"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1.19"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
regex = "1.12.2"
sha2 = "0.10.9"

[dev-dependencies]
# Testing utilities for async code
tokio-test = "0.4"

[profile.release]
# Maximum optimization for production builds
opt-level = 3
# Link-time optimization for smaller binary size
lto = true
# Single codegen unit for better optimization
codegen-units = 1